@@ -18,7 +18,6 @@
 
 package com.tamrielnetwork.gbooster.commands;
 
-import com.google.common.collect.ImmutableMap;
 import com.tamrielnetwork.gbooster.GBooster;
 import com.tamrielnetwork.gbooster.api.BoosterActivateEvent;
 import com.tamrielnetwork.gbooster.boosters.Booster;
@@ -79,10 +78,10 @@ public class GBoosterCmd implements TabExecutor {
 		boosterPlayer.addBooster(booster.getId(), amount);
 
 		if (onlineBoosterPlayer != null) {
-			Chat.sendMessage(onlineBoosterPlayer, ImmutableMap.of("%amount%", String.valueOf(amount), "%booster%", booster.getId()), "receive-boosters");
+			Chat.sendMessage(onlineBoosterPlayer, java.util.Map.of("%amount%", String.valueOf(amount), "%booster%", booster.getId()), "receive-boosters");
 		}
 
-		Chat.sendMessage(sender, ImmutableMap.of("%amount%", String.valueOf(amount), "%booster%", booster.getId(), "%player%", boosterPlayer.getName()), "give-boosters");
+		Chat.sendMessage(sender, java.util.Map.of("%amount%", String.valueOf(amount), "%booster%", booster.getId(), "%player%", boosterPlayer.getName()), "give-boosters");
 	}
 
 	private void doUse(@NotNull CommandSender sender, @NotNull String[] args) {
@@ -107,7 +106,7 @@ public class GBoosterCmd implements TabExecutor {
 
 		main.getActiveBoostersManager().activateBooster(booster);
 		Chat.sendMessage(sender, "active-booster");
-		Chat.sendBroadcast(ImmutableMap.of("%player%", boosterPlayer.getName()), "active-booster-broadcast");
+		Chat.sendBroadcast(java.util.Map.of("%player%", boosterPlayer.getName()), "active-booster-broadcast");
 	}
 
 	private void doTime(@NotNull CommandSender sender, @NotNull String[] args) {
@@ -120,7 +119,7 @@ public class GBoosterCmd implements TabExecutor {
 			Chat.sendMessage(sender, "no-active-booster");
 			return;
 		}
-		Chat.sendMessage(sender, ImmutableMap.of("%duration%", String.valueOf(main.getActiveBoostersManager().getMostOldBoosterInMinutes())), "booster-timer");
+		Chat.sendMessage(sender, java.util.Map.of("%duration%", String.valueOf(main.getActiveBoostersManager().getMostOldBoosterInMinutes())), "booster-timer");
 	}
 
 	@Override
